crates/core/tests/snapshots/derive_schematic_test__generics__supports_bounds.snap
---
source: crates/core/tests/derive_schematic_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl<T: Schematic + Clone> schematic::Schematic for Example<T> {
    fn schema_name() -> Option<String> {
        let mut name = String::from("Example");
        name.push_str(&schematic::schema::schema_name_of::<T>());
        Some(name)
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .structure(
                StructType::new([
                    ("inner".into(), SchemaField::new(schema.infer::<T>())),
                ]),
            )
    }
}
